@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2005 the original author or authors.
+ * Copyright 2002-2006 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -215,6 +215,11 @@ public abstract class AbstractAutoProxyCreator extends ProxyConfig
 		}
 
 		return null;
+	}
+	
+	public boolean postProcessAfterInstantiation(Object bean, String beanName) throws BeansException {
+		// Do nothing, but continue with other post processors and to set properties
+		return true;
 	}
 
 	public Object postProcessBeforeInitialization(Object bean, String beanName) {
